# Kuribo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.py  premake5.lua
Common/: CMakeLists.txt  common.h  debug.h
Common/compiler/: ppc.hxx
Common/core/: sync.hxx
Common/memory/: heap.hxx
Common/security/: Canary.hxx
Common/util/: crc.hxx
Converter/: CMakeLists.txt  CMakeSettings.json  KuriboConverter.cpp
Converter/source/: crc.hpp  types.h
Converter/source/converter/: BinaryBuilder.cpp  BinaryBuilder.hpp  Converter.cpp  Converter.hpp  RelocationExtractor.cpp  RelocationExtractor.hpp  StringTable.cpp  StringTable.hpp
Converter/source/format/: Binary.hpp
GeckoJIT/: CMakeLists.txt  tests.cxx
GeckoJIT/allocator/: frame.hpp
GeckoJIT/engine/: compiler.hpp  engine.cxx
Kernel/: CMakeLists.txt  CMakeSettings.json  build.py  premake5.lua
Kernel/arch/: gc.lcf
Kernel/deprecated/gecko/: CodePrinter.hxx
Kernel/source/: entry.cxx  test.cxx
Kernel/source/codehandler/: codehandler.s
Kernel/source/io/: filesystem.cxx  io.hxx
Kernel/source/jit/allocator/: frame.hpp
Kernel/source/jit/engine/: compiler.hpp
Kernel/source/modules/: Project.cxx  SymbolManager.cxx
Kernel/source/modules/kamek/: Loader.hxx  Module.hxx
Kernel/source/modules/kxer/: Loader.hxx  Module.cxx
Kernel/source/system/: memory.hxx  system.cxx  system.hxx
Kernel/source/system/memory/: free_list_heap.hxx  memory.cxx
Kernel/source/system/memory/xalloc/: FreeListAllocator.cxx  Utils.h
LibKuribo/: CMakeLists.txt
LibKuribo/modules/: Project.cxx  Project.hxx  SymbolManager.hxx
LibKuribo/modules/kxer/: Loader.cxx  Loader.hxx  Module.cxx  Module.hxx
Loader/: Basic.txt  kuribo.xml
Targets/: WiiClangDebug.cmake  WiiClangRelease.cmake  WiiGCC.cmake
arch/: gc.lcf
elfconverter/: addressmapper.py  elfenums.py  elftokmodule.py  exceptions.py  ioreader.py  kamek.py  kmcommands.py  kmhooks.py  kmword.py  linker.py  versionmap.py
examples/: CMakeLists.txt  README.md
examples/advanced_patch/: CMakeLists.txt  advanced_patch.cpp
examples/shared_function/: CMakeLists.txt  application_module.cpp  library_module.cpp
examples/simple/: CMakeLists.txt  simple.cpp
examples/toggle/: CMakeLists.txt  toggle.cpp
examples/yaz0/: CMakeLists.txt  CMakeSettings.json  yaz0.cpp
sdk/: kuribo_sdk.h  kuribo_sdk_impl.h
sdk/kuribo_sdk/: kuribo_internal_api.h  kuribo_jit.h  kuribo_modules.h  kuribo_symbols.h  kuribo_szs.h  kuribo_types.h
source/: common.h  config.h  debug.h  entry.cxx  project.json  test.cxx  types.h
source/Common/: CMakeLists.txt  common.h  config.h  types.h
source/Common/api/: HostInterop.h
source/Common/compiler/: ppc.hxx
source/Common/core/: patch.hxx
source/Common/debug/: kassert.cxx  log.h
source/Common/memory/: heap.hxx
source/Common/util/: deferred.hxx  list.hxx
source/FallbackAllocator/: CMakeLists.txt
source/FallbackAllocator/xalloc/: Allocator.h
source/GeckoJIT/: CMakeLists.txt  module.cxx  tests.cxx
source/GeckoJIT/engine/: compiler.cxx  engine.hpp
source/Kernel/: CMakeLists.txt
source/Kernel/arch/: gc.lcf
source/Kernel/deprecated/: Project.cxx  Project.hxx
source/Kernel/source/: entry.cxx  module.hxx  platform.cxx  test.cxx
source/Kernel/source/io/: io.hxx
source/Kernel/source/system/: memory.hxx  system.cxx  system.hxx
source/Kernel/source/system/memory/: free_list_heap.hxx  memory.cxx  memory_cpp.cxx  memory_cpp14.cxx  memory_eastl.cxx  memory_stdlib.cxx
source/Kernel/source/system/memory/xalloc/: FreeListAllocator.cxx
source/LibKuribo/: CMakeLists.txt  compr.cxx  compr.hxx  filesystem.cxx  filesystem.hxx
source/LibKuribo/modules/: SymbolManager.cxx  SymbolManager.hxx
source/LibKuribo/modules/kxer/: Binary.hxx  Loader.cxx  Loader.hxx  Module.cxx  Module.hxx
source/api/: HostInterop.h  Module.h
source/codehandler/: codehandler.s
source/core/: patch.hxx  sync.hxx
source/debug/: assert.cxx  assert.h  log.h
source/io/: filesystem.cxx  filesystem.hxx  io.hxx
source/jit/: tests.cxx
source/jit/allocator/: frame.hpp
source/jit/engine/: compiler.cxx  compiler.hpp  engine.cxx  engine.hpp
source/modules/: Project.cxx  Project.hxx  SymbolManager.cxx  SymbolManager.hxx
source/modules/comet/: file_format.hxx
source/modules/gecko/: CodeHandler.hxx  CodeManager.hxx  CodePrinter.hxx  Frontend.cxx  Frontend.hxx
source/modules/kamek/: Loader.cxx  Loader.hxx  Module.hxx  kamek.h
source/modules/kxer/: Loader.cxx  Module.hxx
source/system/: memory.hxx  system.cxx  system.hxx
source/system/memory/: free_list_heap.hxx  heap.hxx  memory.cxx  stack_alloc.hxx
source/system/memory/xalloc/: Allocator.h  FreeListAllocator.cxx  FreeListAllocator.h  SinglyLinkedList.h  SinglyLinkedListImpl.h
source/util/: crc.hxx  deferred.hxx  json.hxx
